--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,13 @@ anyio==4.6.2.post1
 arrow==1.3.0
 binaryornot==0.4.4
 certifi==2024.8.30
+cffi==1.17.1
 chardet==5.2.0
 charset-normalizer==3.4.0
 click==8.1.7
 cookiecutter==2.6.0
+cryptography==44.0.0
+docutils==0.21.2
 fastapi==0.115.5
 flet==0.25.1
 flet-cli==0.25.1
@@ -18,12 +21,21 @@ httpcore==1.0.7
 httptools==0.6.4
 httpx==0.28.0
 idna==3.10
+jaraco.classes==3.4.0
+jaraco.context==6.0.1
+jaraco.functools==4.1.0
+jeepney==0.8.0
 Jinja2==3.1.4
+keyring==25.5.0
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+more-itertools==10.5.0
+nh3==0.2.19
 oauthlib==3.2.2
 packaging==24.2
+pkginfo==1.11.2
+pycparser==2.22
 pydantic==2.10.2
 pydantic_core==2.27.1
 Pygments==2.18.0
@@ -33,14 +45,20 @@ python-dotenv==1.0.1
 python-slugify==8.0.4
 PyYAML==6.0.2
 qrcode==7.4.2
+readme_renderer==44.0
 repath==0.9.0
 requests==2.32.3
+requests-toolbelt==1.0.0
+rfc3986==2.0.0
 rich==13.9.4
+SecretStorage==3.3.3
+setuptools==75.6.0
 six==1.16.0
 sniffio==1.3.1
 starlette==0.41.3
 text-unidecode==1.3
 toml==0.10.2
+twine==6.0.1
 types-python-dateutil==2.9.0.20241003
 typing_extensions==4.12.2
 urllib3==2.2.3
