--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -3,7 +3,7 @@ name: Deploy MkDocs to GitHub Pages
 on:
   push:
     branches:
-      - main
+      - main  # Replace with your main branch name
 
 jobs:
   deploy:
@@ -20,11 +20,12 @@ jobs:
 
     - name: Install dependencies
       run: |
-        pip install mkdocs
-        pip install mkdocs-material
+        pip install mkdocs mkdocs-material
 
     - name: Deploy to GitHub Pages
       env:
         TOKEN: ${{ secrets.GH_PAT }}
       run: |
-        mkdocs gh-deploy --force --remote-name origin
+        git config --global user.name "GitHub Actions"
+        git config --global user.email "actions@github.com"
+        mkdocs gh-deploy --force --remote-name origin --remote-branch gh-pages
