--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
 annotated-types==0.7.0
 anyio==4.6.2.post1
 arrow==1.3.0
+babel==2.16.0
 binaryornot==0.4.4
 certifi==2024.8.30
 cffi==1.17.1
 chardet==5.2.0
 charset-normalizer==3.4.0
 click==8.1.7
+colorama==0.4.6
 cookiecutter==2.6.0
 cryptography==44.0.0
 docutils==0.21.2
@@ -16,6 +18,7 @@ flet-cli==0.25.1
 flet-desktop==0.25.1
 flet-desktop-light==0.25.1
 flet-web==0.25.1
+ghp-import==2.1.0
 h11==0.14.0
 httpcore==1.0.7
 httptools==0.6.4
@@ -27,25 +30,37 @@ jaraco.functools==4.1.0
 jeepney==0.8.0
 Jinja2==3.1.4
 keyring==25.5.0
+Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+mergedeep==1.3.4
+mkdocs==1.6.1
+mkdocs-get-deps==0.2.0
+mkdocs-material==9.5.49
+mkdocs-material-extensions==1.3.1
 more-itertools==10.5.0
 nh3==0.2.19
 oauthlib==3.2.2
 packaging==24.2
+paginate==0.5.7
+pathspec==0.12.1
 pkginfo==1.11.2
+platformdirs==4.3.6
 pycparser==2.22
 pydantic==2.10.2
 pydantic_core==2.27.1
 Pygments==2.18.0
+pymdown-extensions==10.12
 pypng==0.20220715.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-slugify==8.0.4
 PyYAML==6.0.2
+pyyaml_env_tag==0.1
 qrcode==7.4.2
 readme_renderer==44.0
+regex==2024.11.6
 repath==0.9.0
 requests==2.32.3
 requests-toolbelt==1.0.0
