--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -3,7 +3,7 @@ name: Deploy MkDocs Site
 on:
   push:
     branches:
-      - main  # Apni default branch ka naam yahan specify karein
+      - main
 
 jobs:
   deploy:
@@ -15,11 +15,16 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'  # Apne requirement ke mutabiq version specify karein
+          python-version: '3.11'
 
       - name: Install MkDocs
         run: |
           pip install mkdocs mkdocs-material
 
-      - name: Deploy MkDocs site
-        run: mkdocs gh-deploy --force
+      - name: Deploy MkDocs site using GH_TOKEN
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        run: |
+          git config --global user.email "actions@github.com"
+          git config --global user.name "github-actions[bot]"
+          mkdocs gh-deploy --force --remote-name origin --remote-branch gh-pages
