--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,4 +1,4 @@
-name: Deploy MkDocs Site
+name: Deploy MkDocs Source Files
 
 on:
   push:
@@ -12,19 +12,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-
-      - name: Install MkDocs
-        run: |
-          pip install mkdocs mkdocs-material
-
-      - name: Deploy MkDocs site using GH_TOKEN
-        env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+      - name: Deploy MkDocs Source Files (No HTML)
         run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "github-actions[bot]"
-          mkdocs gh-deploy --force --remote-name origin --remote-branch gh-pages
+          git checkout --orphan gh-pages
+          git rm -rf .
+          cp -r docs/* .  # Sirf docs folder deploy karne ke liye
+          cp mkdocs.yml .
+          git add .
+          git commit -m "Deploy MkDocs source files"
+          git push origin gh-pages --force
