--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -12,6 +12,13 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
+      - name: Verify mkdocs.yml Existence
+        run: |
+          if [ ! -f "mkdocs.yml" ]; then
+            echo "mkdocs.yml not found!"
+            exit 1
+          fi
+
       - name: Deploy MkDocs Configuration Only (No HTML)
         run: |
           git config --global user.email "actions@github.com"
@@ -20,7 +27,6 @@ jobs:
           git checkout --orphan gh-pages
           git rm -rf .
           
-          # Sirf mkdocs.yml aur docs folder deploy karna
           cp mkdocs.yml .
           cp -r docs .
           
