--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -12,24 +12,6 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Verify mkdocs.yml Existence
-        run: |
-          if [ ! -f "mkdocs.yml" ]; then
-            echo "mkdocs.yml not found!"
-            exit 1
-          fi
-
       - name: Deploy MkDocs Configuration Only (No HTML)
         run: |
-          git config --global user.email "actions@github.com"
-          git config --global user.name "github-actions[bot]"
-          
-          git checkout --orphan gh-pages
-          git rm -rf .
-          
-          cp mkdocs.yml .
-          cp -r docs .
-          
-          git add .
-          git commit -m "Deploy MkDocs source files only"
-          git push origin gh-pages --force
+          mkdocs serve
